add cheack and now i understand my git problem

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             Email: info@gmail.com
                         </p>
                         <P class="future-phn">
-                            Phone: 01500 00 00 00
+                            Phone: 01500 00 00 00 &check;&check;
                         </P>
                         <a href=""><img src="/images/icons/fb.png" alt=""></a>
                         <a href=""><img src="/images/icons/twitter.png" alt=""></a>
