--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="failure">
             <div class="previous-year">
                 <div class="previous-year-image">
-                    <img src="/images/person.png" alt="">
+                    <img src="images/person.png" alt="">
                 </div>
                 <div class="previous-year-details">
                 <h3 class="previous-year-title">
@@ -51,28 +51,28 @@
             </h3>
             <div class="plan-container">
                 <div class="plan-info">
-                    <img src="/images/icons/web.png" alt="" srcset="">
+                    <img src="images/icons/web.png" alt="">
                     <h3>
                         Web Development
                     </h3>
                     <p>I want to start</p>
                 </div>
                 <div class="plan-info">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <h3>
                         Javascript
                     </h3>
                     <p>I want to learn</p>
                 </div>
                 <div class="plan-info">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="images/icons/smoke.png" alt="">
                     <h3>
                         Smoking Habit
                     </h3>
                     <p>I want to end</p>
                 </div>
                 <div class="plan-info">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="images/icons/ecom.png" alt="">
                     <h3>
                         Ecommerce
                     </h3>
